--- a/SkiaSharpForms/SkiaSharpFormsDemos/SkiaSharpFormsDemos/SkiaSharpFormsDemos/HomePage.xaml
+++ b/SkiaSharpForms/SkiaSharpFormsDemos/SkiaSharpFormsDemos/SkiaSharpFormsDemos/HomePage.xaml
@@ -207,17 +207,33 @@
                           CommandParameter="{x:Type local:Transforms.SkewShadowTextPage}" />
                 
                 <!-- Matrix -->
+                <TextCell Text="Path Transform"
+                          Detail="Apply a transform to a path"
+                          Command="{Binding NavigateCommand}"
+                          CommandParameter="{x:Type local:Transforms.PathTransformPage}" />
+
                 <TextCell Text="Show Affine Matrix"
                           Detail="Display the matrix for affine transforms"
                           Command="{Binding NavigateCommand}"
                           CommandParameter="{x:Type local:Transforms.ShowAffineMatrixPage}" />
 
+                <!-- Touch Manipulation -->
                 <TextCell Text="Touch Manipulation"
                           Detail="Pan, scale, and rotate a bitmap"
                           Command="{Binding NavigateCommand}"
                           CommandParameter="{x:Type local:Transforms.TouchManipulationPage}" />
 
+                <TextCell Text="Bitmap Scatter View"
+                          Detail="Pan, scale, and rotate multiple bitmaps"
+                          Command="{Binding NavigateCommand}"
+                          CommandParameter="{x:Type local:Transforms.BitmapScatterViewPage}" />
+                
                 <!-- Non-Affine -->
+                <TextCell Text="Test Perspective"
+                          Detail="Experiment with the third matrix column"
+                          Command="{Binding NavigateCommand}"
+                          CommandParameter="{x:Type local:Transforms.TestPerspectivePage}" />
+
                 <TextCell Text="Taper Transform"
                           Detail="Discover how to calculate a taper transform"
                           Command="{Binding NavigateCommand}"
